--- a/Zalve/index.html
+++ b/Zalve/index.html
@@ -6,15 +6,13 @@
   <title>Zalve | Clothing Brand</title>
 
   <!-- Google Fonts: Playfair Display + Inter -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <!-- Navbar -->
   <header class="nav">
@@ -43,9 +41,9 @@
       </div>
     </div>
 
-    <div class="hero-image">
-      <!-- Hero image: put hero-main.jpg inside /images -->
-      <img src="images/hero-main.jpg" alt="Zalve editorial look" />
+    <!-- Placeholder hero -->
+    <div class="hero-image placeholder">
+      <div class="ph-text">Hero Image Placeholder</div>
     </div>
   </section>
 
@@ -59,137 +57,73 @@
     </div>
 
     <div class="product-grid">
-      <!-- 1. Pinterest cargo pants image slot -->
+
+      <!-- Product placeholder cards -->
       <article class="product-card">
         <div class="product-tag">Highlight</div>
-        <div class="product-image">
-          <!-- Save your Pinterest cargo here as images/cargo-pinterest.jpg -->
-          <img src="images/cargo-pinterest.jpg" alt="Zalve cargo pants" />
+        <div class="product-image placeholder">
+          <div class="ph-text">Product</div>
         </div>
         <div class="product-info">
           <h3>Cargo Scimitar Pants</h3>
           <p>Relaxed leg, stacked look, built for everyday wear.</p>
-          <div class="product-meta">
-            <span class="product-label">Beige · S–XXL</span>
-          </div>
         </div>
       </article>
 
-      <!-- 2 -->
       <article class="product-card">
-        <div class="product-image">
-          <img src="images/hoodie-midnight.jpg" alt="Zalve midnight hoodie" />
+        <div class="product-image placeholder">
+          <div class="ph-text">Product</div>
         </div>
         <div class="product-info">
           <h3>Midnight Hoodie</h3>
           <p>Soft fleece interior, structured hood and dropped shoulders.</p>
-          <div class="product-meta">
-            <span class="product-label">Black · Oversized fit</span>
-          </div>
         </div>
       </article>
 
-      <!-- 3 -->
       <article class="product-card">
-        <div class="product-image">
-          <img src="images/tee-classic.jpg" alt="Zalve classic tee" />
+        <div class="product-image placeholder">
+          <div class="ph-text">Product</div>
         </div>
         <div class="product-info">
           <h3>Classic Logo Tee</h3>
-          <p>Clean chest print, mid-weight cotton, daily essential.</p>
-          <div class="product-meta">
-            <span class="product-label">White / Charcoal</span>
-          </div>
+          <p>Mid-weight cotton, daily essential.</p>
         </div>
       </article>
 
-      <!-- 4 -->
       <article class="product-card">
-        <div class="product-image">
-          <img src="images/cargo-black.jpg" alt="Zalve black cargo pants" />
+        <div class="product-image placeholder">
+          <div class="ph-text">Product</div>
         </div>
         <div class="product-info">
           <h3>Urban Utility Cargo</h3>
-          <p>Multi-pocket design with tapered ankle and subtle paneling.</p>
-          <div class="product-meta">
-            <span class="product-label">Black · Regular fit</span>
-          </div>
+          <p>Multi-pocket tapered design.</p>
         </div>
       </article>
 
-      <!-- 5 -->
       <article class="product-card">
-        <div class="product-image">
-          <img src="images/set-monochrome.jpg" alt="Zalve monochrome set" />
+        <div class="product-image placeholder">
+          <div class="ph-text">Product</div>
         </div>
         <div class="product-info">
           <h3>Monochrome Set</h3>
-          <p>Co-ord hoodie and jogger set for all-day comfort.</p>
-          <div class="product-meta">
-            <span class="product-label">Grey · Limited</span>
-          </div>
+          <p>Co-ord hoodie + jogger for all-day comfort.</p>
         </div>
       </article>
 
-      <!-- 6 -->
       <article class="product-card">
-        <div class="product-image">
-          <img src="images/tee-graphic.jpg" alt="Zalve graphic tee" />
+        <div class="product-image placeholder">
+          <div class="ph-text">Product</div>
         </div>
         <div class="product-info">
-          <h3>Graphic Statement Tee</h3>
-          <p>Front and back print inspired by late-night city lines.</p>
-          <div class="product-meta">
-            <span class="product-label">Off-white</span>
-          </div>
+          <h3>Graphic Tee</h3>
+          <p>Minimal print inspired by city nights.</p>
         </div>
       </article>
 
-      <!-- 7 -->
-      <article class="product-card">
-        <div class="product-image">
-          <img src="images/overshirt.jpg" alt="Zalve overshirt" />
-        </div>
-        <div class="product-info">
-          <h3>Layered Overshirt</h3>
-          <p>Lightweight layer to throw over tees and hoodies.</p>
-          <div class="product-meta">
-            <span class="product-label">Olive / Sand</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- 8 -->
-      <article class="product-card">
-        <div class="product-image">
-          <img src="images/denim-relaxed.jpg" alt="Zalve relaxed denim" />
-        </div>
-        <div class="product-info">
-          <h3>Relaxed Denim</h3>
-          <p>Straight-cut denim with a soft washed finish.</p>
-          <div class="product-meta">
-            <span class="product-label">Light blue</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- 9 -->
-      <article class="product-card">
-        <div class="product-image">
-          <img src="images/hoodie-cream.jpg" alt="Zalve cream hoodie" />
-        </div>
-        <div class="product-info">
-          <h3>Cream Studio Hoodie</h3>
-          <p>Minimal branding, heavy weight, structured silhouette.</p>
-          <div class="product-meta">
-            <span class="product-label">Cream · Thick fleece</span>
-          </div>
-        </div>
-      </article>
     </div>
   </section>
 
-  <!-- Lookbook Section -->
+  <!-- Lookbook -->
   <section id="lookbook" class="section section-alt">
     <div class="section-header">
       <h2>Lookbook</h2>
@@ -197,108 +131,76 @@
         Zalve styled in real-world fits — campus, streets, rooftops.
       </p>
     </div>
+
     <div class="lookbook-grid">
-      <figure class="lookbook-item large">
-        <img src="images/lookbook-1.jpg" alt="Zalve streetwear look 1" />
-      </figure>
-      <figure class="lookbook-item">
-        <img src="images/lookbook-2.jpg" alt="Zalve streetwear look 2" />
-      </figure>
-      <figure class="lookbook-item">
-        <img src="images/lookbook-3.jpg" alt="Zalve streetwear look 3" />
-      </figure>
-      <figure class="lookbook-item wide">
-        <img src="images/lookbook-4.jpg" alt="Zalve rooftop look" />
-      </figure>
+      <div class="lookbook-item large placeholder"><div class="ph-text">Look</div></div>
+      <div class="lookbook-item placeholder"><div class="ph-text">Look</div></div>
+      <div class="lookbook-item placeholder"><div class="ph-text">Look</div></div>
+      <div class="lookbook-item wide placeholder"><div class="ph-text">Look</div></div>
     </div>
   </section>
 
-  <!-- About Section -->
+  <!-- About -->
   <section id="about" class="section">
     <div class="about-layout">
       <div class="about-text">
         <p class="eyebrow">About the brand</p>
         <h2>Built small, made to feel big.</h2>
         <p>
-          Zalve started as an idea in between classes — to build a lean streetwear
-          label with clean lines, neutral tones and fits that feel good all day.
+          Zalve started with one goal — clean silhouettes, neutral tones,
+          street-ready fits built for everyday life.
         </p>
         <p>
-          We work in small drops so we can obsess over details: fabric weight,
-          stitching, how a hoodie sits on your shoulders, how cargos stack on
-          your sneakers.
-        </p>
-        <p>
-          This first drop is limited. No fake hype, no fake scarcity — just
-          pieces we actually wear ourselves.
+          We design in small drops so we can obsess over details: fabric weight,
+          stitching, structure and comfort.
         </p>
       </div>
+
       <div class="about-meta">
         <div class="about-card">
           <h3>Fabric first</h3>
-          <p>Mid-weight cotton, soft fleece and durable blends that last more than just a season.</p>
+          <p>Mid-weight cotton, soft fleece, durable blends.</p>
         </div>
         <div class="about-card">
           <h3>Made for movement</h3>
-          <p>Fits tested in real life: college, commutes, café tables, late-night walks.</p>
+          <p>Fits tested in real life: college, commutes, late-night walks.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!-- Contact -->
   <section id="contact" class="section section-alt">
     <div class="section-header">
       <h2>Pre-orders & Collaborations</h2>
-      <p class="section-subtitle">
-        Want to pre-order, stock Zalve, or collab on a shoot? Drop your details.
-      </p>
+      <p class="section-subtitle">Reach out for pre-orders, stockist requests or collabs.</p>
     </div>
 
     <div class="contact-layout">
       <form id="contactForm" class="contact-form">
         <div class="form-row">
           <div class="form-group">
-            <label for="name">Name*</label>
-            <input id="name" type="text" required />
+            <label>Name*</label>
+            <input type="text" required />
           </div>
           <div class="form-group">
-            <label for="email">Email*</label>
-            <input id="email" type="email" required />
+            <label>Email*</label>
+            <input type="email" required />
           </div>
         </div>
 
         <div class="form-group">
-          <label for="subject">What’s this about?</label>
-          <select id="subject">
-            <option value="preorder">Pre-order</option>
-            <option value="stockist">Retail / stockist</option>
-            <option value="collab">Shoot / collab</option>
-            <option value="other">Something else</option>
-          </select>
+          <label>Message*</label>
+          <textarea rows="4" required></textarea>
         </div>
 
-        <div class="form-group">
-          <label for="message">Message / order details*</label>
-          <textarea id="message" rows="4" required></textarea>
-        </div>
-
-        <button type="submit" class="btn primary-btn">Send message</button>
-        <p id="formStatus" class="form-status"></p>
+        <button class="btn primary-btn">Send</button>
       </form>
 
       <div class="contact-side">
-        <h3>Quick links</h3>
+        <h3>Contact</h3>
         <p class="contact-note">
-          You can also reach us directly on:
-        </p>
-        <ul class="contact-list">
-          <li><strong>Instagram</strong>: @zalve.official</li>
-          <li><strong>Email</strong>: hello@zalve.studio (placeholder)</li>
-        </ul>
-        <p class="contact-note">
-          Once the first drop goes live, this page can show stock updates,
-          size charts and shipping timelines.
+          Instagram: @zalve.official  
         </p>
       </div>
     </div>
@@ -309,6 +211,10 @@
     <p>© <span id="year"></span> Zalve. All rights reserved.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+
 </body>
 </html>
+
